<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaPrincipal">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/CoordinatorLayoutTelaPrincipal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_boas_vindas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:text="Boas vindas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_editar_perfil"
            android:layout_width="255dp"
            android:layout_height="63dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white"
            android:text="@string/editar_perfil"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_boas_vindas" />

        <Button
            android:id="@+id/bt_meus_pets"
            android:layout_width="255dp"
            android:layout_height="63dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/meus_pets"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_editar_perfil" />

        <Button
            android:id="@+id/bt_lista_pets"
            android:layout_width="255dp"
            android:layout_height="63dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/lista_de_pets"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_meus_pets" />

        <Button
            android:id="@+id/bt_relatar_sumico"
            android:layout_width="255dp"
            android:layout_height="63dp"
            android:layout_marginStart="78dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:text="@string/relatar_sumico"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_lista_pets" />

    </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>